@@ -1,3 +1,6 @@
+Sat Feb 21 20:58:10 2004  Peter Naulls  <peter@chocky.org>
+	* source/clib/strings.h: Remove extra #ifdef
+
 Sun Feb 15 18:45:16 2004  Peter Naulls  <peter@chocky.org>
 
 	* source/clib/unixlib/types.h, source/clib/math.h,
